# zerobus

./: README.md  databricks.yml  pyproject.toml
.github/workflows/: dev.yml
resources/: Zerobus.job.yml  catalog.yml
src/: producer.py
